Made a frist stab at config issues.

--- a/conf/profiles.config
+++ b/conf/profiles.config
@@ -10,7 +10,7 @@ profiles {
         process.executor = 'local'
     }
 
-    abel {
+    abel_nn9305k {
         process.executor = 'slurm'
         process.queue = 'nn9305k'
         process.cpus = '32'
