--- a/conf/input_and_software_params.config
+++ b/conf/input_and_software_params.config
@@ -1,29 +1,24 @@
 // Input and output
 // Specify your input:
-params.read_pairs = "short/*R{1,2}_001.short.fastq.gz"
+params.reads = "/home/karinlag/PycharmProjects/testdata/short/*R{1,2}_001.short.fastq.gz"
 //  Specify the name of the output directory, relative to where the input is
-params.out_dir = "assembly_output"
+params.out_dir = "results"
 
 
 // General configuration variables
 params.pwd = "$PWD"
 params.help = false
 
-
-
 params.threads = 1
 
-threads = params.threads
-
 // Trimmomatic configuration variables
-params.leading = 3
-params.trailing = 3
-params.slidingwindow = "4:15"
-params.minlen = 36
-params.adapters = "TruSeq3-PE.fa"
+params.tm_leading = 3
+params.tm_trailing = 3
+params.tm_slidingwindow = "4:15"
+params.tm_minlen = 36
+params.tm_adapters = "TruSeq3-PE.fa"
 
-leading = params.leading
-trailing = params.trailing
-slidingwindow = params.slidingwindow
-minlen = params.minlen
-adapters = params.adapters
+// Ariba mlst params
+params.mlst_scheme = "Escherichia coli#1"
+params.mlst_results = "mlst_results"
+
