--- a/conf/input_and_software_params.config
+++ b/conf/input_and_software_params.config
@@ -19,6 +19,7 @@ params.tm_minlen = 36
 params.tm_adapters = "TruSeq3-PE.fa"
 
 // Ariba mlst params
-params.mlst_scheme = "Escherichia coli#1"
+//params.mlst_scheme = "Escherichia coli#1"
+params.mlst_scheme = "Campylobacter jejuni"
 params.mlst_results = "mlst_results"
 
