--- a/conf/input_and_software_params.config
+++ b/conf/input_and_software_params.config
@@ -23,3 +23,8 @@ params.tm_adapters = "TruSeq3-PE.fa"
 params.mlst_scheme = "Campylobacter jejuni"
 params.mlst_results = "mlst_results"
 
+
+// Ariba AMR params
+// Check the ariba webpage for legal values
+params.amr_db = "card"
+params.amr_results = "amr_results"
