Got vir working!!!! Also figured out channels, although I am still wondering about difference between set and into.

--- a/conf/input_and_software_params.config
+++ b/conf/input_and_software_params.config
@@ -28,3 +28,8 @@ params.mlst_results = "mlst_results"
 // Check the ariba webpage for legal values
 params.amr_db = "card"
 params.amr_results = "amr_results"
+
+// Ariba virulence params
+// Check the ariba webpage for legal values
+params.vir_db = "vfdb_core"
+params.vir_results = "vir_results"
