updating test path

--- a/conf/input_and_software_params.config
+++ b/conf/input_and_software_params.config
@@ -1,6 +1,6 @@
 // Input and output
 // Specify your input:
-params.reads = "/home/karinlag/PycharmProjects/testdata/short/*R{1,2}_001.short.fastq.gz"
+params.reads = "../testdata/short/*R{1,2}_001.short.fastq.gz"
 //  Specify the name of the output directory, relative to where the input is
 params.out_dir = "results"
 
