Figured out how to get data into sets of four, if need be. Main trick is that everything before the * becomes the prefix.

--- a/conf/input_and_software_params.config
+++ b/conf/input_and_software_params.config
@@ -1,6 +1,14 @@
 // Input and output
-// Specify your input:
+/*
+* Specify your input:
+* How: you have a star as a wildcard. Everything up to that is
+* the prefix for the group of files that you will get. Variable
+* things (lane names, read numbers etc) are specified within
+* curly brackets. Make sure that setsize matches the number of
+* files that you get matching the prefix!
+*/
 params.reads = "../testdata/short/*R{1,2}_001.short.fastq.gz"
+params.setsize = 4
 //  Specify the name of the output directory, relative to where the input is
 params.out_dir = "results"
 
