--- a/conf/input_and_software_params.config
+++ b/conf/input_and_software_params.config
@@ -7,8 +7,8 @@
 * curly brackets. Make sure that setsize matches the number of
 * files that you get matching the prefix!
 */
-params.reads = "../testdata/fastq_files/*R{1,2}_001.fastq.gz"
-params.setsize = 2
+params.reads = "../testdata/short/*L00{1,2}_R{1,2}_001.short.fastq.gz"
+params.setsize = 4
 //  Specify the name of the output directory, relative to where the input is
 params.out_dir = "results"
 
