--- a/conf/input_and_software_params.config
+++ b/conf/input_and_software_params.config
@@ -8,6 +8,7 @@
 * files that you get matching the prefix!
 */
 params.reads = "../testdata/short/*L00{1,2}_R{1,2}_001.short.fastq.gz"
+params.file_ending = ".fastq.gz"
 params.setsize = 4
 //  Specify the name of the output directory, relative to where the input is
 params.out_dir = "results"
