--- a/conf/input_and_software_params.config
+++ b/conf/input_and_software_params.config
@@ -10,7 +10,7 @@
 params.reads = "../testdata/short/*L00{1,2}_R{1,2}_001.short.fastq.gz"
 params.file_ending = ".fastq.gz"
 params.setsize = 4
-//  Specify the name of the output directory, relative to where the input is
+//  Specify the name of the output directory, relative to where the script is being run
 params.out_dir = "results"
 
 
@@ -26,6 +26,9 @@ params.tm_trailing = 3
 params.tm_slidingwindow = "4:15"
 params.tm_minlen = 36
 params.tm_adapters = "TruSeq3-PE.fa"
+
+// Collected raw data
+params.raw_data = "raw_data"
 
 // Ariba mlst params
 //params.mlst_scheme = "Escherichia coli#1"
