trying things out on abel, have set directives (I think) for the processes.

--- a/conf/nn9305k.config
+++ b/conf/nn9305k.config
@@ -2,7 +2,11 @@
 process {
     executor = 'slurm'
     clusterOptions = '--job-name=nxf_test --account=nn9305k --mem-per-cpu=3140'
-}
+    maxForks=64
+    time = { 2.h * task.attempt }
+    maxRetries=3
+    errorStrategy='retry'
 
 // Abel specific software options
 
+}
