- got basics of assembly to work - refactored/added assembly stuff into its own config file

--- a/conf/standard.config
+++ b/conf/standard.config
@@ -2,20 +2,32 @@
 *  Standard config file to use on a local computer
 */
 
-process {
-  executor = "local"
-  cpus = 1
 
-  /* Programs that have to be available on the cmd line
-  * To run ariba (mlst, amr and virulence):
-  *
-  * python3
-  * ariba
-  * cd-hit
-  * mummer
-  * bowtie2
-  *
-  */
+env {
+    PATH = '/home/karinlag/bin/:${PATH}'
 
 }
 
+
+process {
+    executor = "local"
+    cpus = 1
+
+     /* Programs that have to be available on the cmd line
+    * To run ariba (mlst, amr and virulence):
+    *
+    * python3
+    * ariba
+    * cd-hit
+    * mummer
+    * bowtie2
+    *
+    */
+
+    $run_trim {
+        threads = 1
+
+    }
+
+
+}
