seems I might have figured out path&sw options. Now trying on abel

--- a/conf/nn9305k.config
+++ b/conf/nn9305k.config
@@ -9,4 +9,17 @@ process {
 
 // Abel specific software options
 
+
+    $run_trim {
+        threads = 6
+        trimmomatic = 'java -jar /work/projects/nn9305k/bin/Trimmomatic-0.36/trimmomatic-0.36.jar'
+        adapter_directory = '/work/projects/nn9305k/bin/Trimmomatic-0.36/adapters'
+    }
+
+    $spades_assembly {
+        cpus = 1
+        module = ['spades/3.9.0']
+        spades = 'spades.py'
+
+    }
 }
