--- a/conf/standard.config
+++ b/conf/standard.config
@@ -26,8 +26,13 @@ process {
 
     $run_trim {
         threads = 1
-
+        trimmomatic = 'java -jar /home/karinlag/bin/Trimmomatic-0.36/trimmomatic-0.36.jar'
+        adapter_directory = '/home/karinlag/bin/Trimmomatic-0.36/adapters'
     }
 
+    $spades_assembly {
+        cpus = 1
+        spades = '/home/karinlag/bin/SPAdes-3.10.1-Linux/bin/spades.py'
 
+    }
 }
