Modified nn9305k config file to add queue params

--- a/conf/nn9305k.config
+++ b/conf/nn9305k.config
@@ -12,12 +12,14 @@ process {
 
     $run_trim {
         threads = 6
+        time = { 30.m * task.attempt }
         trimmomatic = 'java -jar /work/projects/nn9305k/bin/Trimmomatic-0.36/trimmomatic-0.36.jar'
         adapter_directory = '/work/projects/nn9305k/bin/Trimmomatic-0.36/adapters'
     }
 
     $spades_assembly {
-        cpus = 1
+        cpus = 32
+        time = { 6.h * task.attempt}
         module = ['spades/3.9.0']
         spades = 'spades.py'
 
