Got quast to work!

--- a/conf/standard.config
+++ b/conf/standard.config
@@ -33,6 +33,13 @@ process {
     $spades_assembly {
         cpus = 1
         spades = '/home/karinlag/bin/SPAdes-3.10.1-Linux/bin/spades.py'
-
     }
+
+
+    $quast_eval {
+        threads = 1
+        time = { 30.m * task.attempt }
+        quast = 'quast.py'
+    }
+
 }
