--- a/conf/standard.config
+++ b/conf/standard.config
@@ -24,6 +24,15 @@ process {
     *
     */
 
+    $run_fastqc {
+        threads = 1
+        fastqc = "fastqc"
+    }
+
+    $run_fastqc_eval {
+        python = 'python3'
+    }
+
     $run_trim {
         threads = 1
         trimmomatic = 'java -jar /home/karinlag/bin/Trimmomatic-0.36/trimmomatic-0.36.jar'
