First go at updating nn9305k with options needed for fastqc and for quast.

--- a/conf/nn9305k.config
+++ b/conf/nn9305k.config
@@ -9,6 +9,18 @@ process {
 
 // Abel specific software options
 
+    $run_fastqc {
+        threads = 6
+        time = { 30.m * task.attempt }
+        module = ['fastqc']
+        fastqc = "fastqc"
+    }
+
+    $run_fastqc_eval {
+        time = { 30.m * task.attempt }
+        module = ['python3']
+        python = 'python3'
+    }
 
     $run_trim {
         threads = 6
@@ -23,5 +35,12 @@ process {
         module = ['spades/3.9.0']
         spades = 'spades.py'
 
+    }
+
+    $quast_eval {
+        threads = 6
+        time = { 30.m * task.attempt }
+        module = ['quast']
+        quast = 'quast.py'
     }
 }
