Fixed adapter directory name, also updating options to spades

--- a/conf/nn9305k.config
+++ b/conf/nn9305k.config
@@ -25,7 +25,7 @@ process {
         threads = 6
         time = { 30.m * task.attempt }
         trimmomatic = 'java -jar /work/projects/nn9305k/bin/Trimmomatic-0.36/trimmomatic-0.36.jar'
-        adapter_directory = '/work/projects/nn9305k/bin/Trimmomatic-0.36/adapters'
+        adapter_dir = '/work/projects/nn9305k/bin/Trimmomatic-0.36/adapters'
     }
 
     $spades_assembly {
