--- a/conf/standard.config
+++ b/conf/standard.config
@@ -35,7 +35,7 @@ process {
     $run_trim {
         threads = 1
         trimmomatic = 'java -jar /home/karinlag/bin/Trimmomatic-0.36/trimmomatic-0.36.jar'
-        adapter_directory = '/home/karinlag/bin/Trimmomatic-0.36/adapters'
+        adapter_dir = '/home/karinlag/bin/Trimmomatic-0.36/adapters'
     }
 
     $spades_assembly {
