fixing spelling of mem to trim

--- a/conf/nn9305k.config
+++ b/conf/nn9305k.config
@@ -24,7 +24,7 @@ process {
     $run_trim {
         threads = 6
         time = { 30.m * task.attempt }
-        trimmomatic = 'java -Xmx1024 -jar /work/projects/nn9305k/bin/Trimmomatic-0.36/trimmomatic-0.36.jar'
+        trimmomatic = 'java -Xmx1024m -jar /work/projects/nn9305k/bin/Trimmomatic-0.36/trimmomatic-0.36.jar'
         adapter_dir = '/work/projects/nn9305k/bin/Trimmomatic-0.36/adapters'
     }
 
