updated nn9305k, I have to keep # cpus and #threads the same, and also have both for those that use threads instead of cpus as the name.

--- a/conf/nn9305k.config
+++ b/conf/nn9305k.config
@@ -10,20 +10,24 @@ process {
 // Abel specific software options
 
     $run_fastqc {
+        // note, number of threads and cpus have to be the same
         threads = 6
-        time = { 30.m * task.attempt }
+        cpus = 6
+        time = { 60.m * task.attempt }
         module = ['fastqc']
         fastqc = "fastqc"
     }
 
     $run_fastqc_eval {
-        time = { 30.m * task.attempt }
+        time = { 60.m * task.attempt }
         module = ['python3']
     }
 
     $run_trim {
+        // note, number of threads and cpus have to be the same
         threads = 6
-        time = { 30.m * task.attempt }
+        cpus = 6
+        time = { 60.m * task.attempt }
         trimmomatic = 'java -Xmx1024m -jar /work/projects/nn9305k/bin/Trimmomatic-0.36/trimmomatic-0.36.jar'
         adapter_dir = '/work/projects/nn9305k/bin/Trimmomatic-0.36/adapters'
     }
