Worked on sorting out the profiles to streamline my thinking. Added a file describing the software that is being used.

--- a/conf/slurm.config
+++ b/conf/slurm.config
@@ -1,3 +1,18 @@
+/*
+* Profile for use on a slurm queueing system
+* This file will have to be modified to your local system
+* Currently this file assumes that a lot of software is available
+* via the module system http://modules.sourceforge.net/
+* If this is not the case, all software listed after "module"
+* have to be given a specific path so that it will be available
+*
+* Currently this file is tuned to work on the Abel University
+* of Oslo HPC cluster.
+*
+* Not all software is being used by all tracks. Each software
+* contains a comment explaining which track(s) it is part of.
+*/
+
 // cluster specific options
 process {
     executor = 'slurm'
