--- a/conf/standard.config
+++ b/conf/standard.config
@@ -1,5 +1,7 @@
 /*
-*  Standard config file to use on a local computer
+* Standard profile file for use on a local computer
+* This setup assumes that most of the software is available on
+* the command line in the shell were Nextflow is being run.
 */
 
 
