--- a/conf/track_three_template.config
+++ b/conf/track_three_template.config
@@ -1,4 +1,9 @@
-// Input and output
+// Track One
+
+/*
+* This is the input, options and output file for Track One.
+*/
+
 /*
 * Specify your input:
 * How: you have a star as a wildcard. Everything up to that is
