--- a/conf/track_two_template.config
+++ b/conf/track_two_template.config
@@ -11,7 +11,7 @@ params.reads = "../testdata/fastq_files/*L00{1,2}_R{1,2}_001.fastq.gz"
 params.file_ending = ".fastq.gz"
 params.setsize = 2
 //  Specify the name of the output directory, relative to where the script is being run
-params.out_dir = "results"
+params.out_dir = "track_two"
 
 
 // General configuration variables
@@ -19,13 +19,6 @@ params.pwd = "$PWD"
 params.help = false
 
 params.threads = 1
-
-// Trimmomatic configuration variables
-params.tm_leading = 3
-params.tm_trailing = 3
-params.tm_slidingwindow = "4:15"
-params.tm_minlen = 36
-params.tm_adapters = "TruSeq3-PE.fa"
 
 // Collected raw data
 params.raw_data = "raw_data"
