Removed reference to MultiQC, since I can\t work that yet.
Also, factored out fastqc stuff into separate track.
Also, made wrapper script that I can use to run the other things.

--- a/conf/track_three_template.config
+++ b/conf/track_three_template.config
@@ -1,7 +1,7 @@
-// Track One
+// Track Three
 
 /*
-* This is the input, options and output file for Track One.
+* This is the input, options and output file for Track Three.
 */
 
 /*
@@ -17,7 +17,7 @@ params.file_ending = ".fastq.gz"
 params.setsize = 4
 
 //  Specify the name of the output directory, relative to where the script is being run
-params.out_dir = "results"
+params.out_dir = "track_three"
 
 // General configuration variables
 params.pwd = "$PWD"
