Updating name to slurm config file

--- a/nextflow.config
+++ b/nextflow.config
@@ -16,6 +16,6 @@ profiles {
     includeConfig 'conf/standard.config'
   }
   nn9305k {
-    includeConfig 'conf/nn9305k.config'
+    includeConfig 'conf/slurm.config'
   }
 }
