Now updating the name of the profile

--- a/nextflow.config
+++ b/nextflow.config
@@ -15,7 +15,7 @@ profiles {
   standard {
     includeConfig 'conf/standard.config'
   }
-  nn9305k {
+  slurm {
     includeConfig 'conf/slurm.config'
   }
 }
