--- a/conf/slurm.config
+++ b/conf/slurm.config
@@ -43,8 +43,8 @@ process {
         threads = 6
         cpus = 6
         time = { 60.m * task.attempt }
-        trimmomatic = 'java -Xmx1024m -jar /work/projects/nn9305k/bin/Trimmomatic-0.36/trimmomatic-0.36.jar'
-        adapter_dir = '/work/projects/nn9305k/bin/Trimmomatic-0.36/adapters'
+        trimmomatic = 'java -Xmx1024m -jar /work/projects/nn9305k/bin/trimmomatic-0.36.jar'
+        adapter_dir = '/work/projects/nn9305k/db_flatfiles/adapters'
     }
 
     $spades_assembly {
