--- a/conf/track_three_template.config
+++ b/conf/track_three_template.config
@@ -1,3 +1,4 @@
+
 // Track Three
 
 /*
@@ -40,7 +41,7 @@ params.trailing = 3
 params.slidingwindow = "4:15"
 params.minlen = 36
 params.adapters = "TruSeq3-PE.fa"
-params.illuminaClipOptions = "2:30:10:TRUE"
+params.illuminaClipOptions = "2:30:10"
 
 
 // SPAdes configuration variables
