Adding crop and headcrop to trimming.

--- a/conf/track_three_template.config
+++ b/conf/track_three_template.config
@@ -36,12 +36,14 @@ params.fastqc_eval = "fastqc_eval"
 
 // Trimmomatic configuration variables
 params.trimmed = "trimmed"
+params.illuminaClipOptions = "2:30:10"
+params.slidingwindow = "4:15"
+params.crop = 0
+params.headcrop = 0
 params.leading = 3
 params.trailing = 3
-params.slidingwindow = "4:15"
 params.minlen = 36
 params.adapters = "TruSeq3-PE.fa"
-params.illuminaClipOptions = "2:30:10"
 
 
 // SPAdes configuration variables
