Specifying crop doesn't actually work, because if I do CROP=0, it cuts the reads completely. Thus, I am asking people to include that in the slidingwindow text string.

--- a/conf/track_three_template.config
+++ b/conf/track_three_template.config
@@ -37,9 +37,8 @@ params.fastqc_eval = "fastqc_eval"
 // Trimmomatic configuration variables
 params.trimmed = "trimmed"
 params.illuminaClipOptions = "2:30:10"
+// If you are using CROP/HEADCROP, insert the full command in the slidingwindow text string.
 params.slidingwindow = "4:15"
-params.crop = 0
-params.headcrop = 0
 params.leading = 3
 params.trailing = 3
 params.minlen = 36
