Working on incorporating bbmap, but something is broken

--- a/conf/standard.config
+++ b/conf/standard.config
@@ -31,13 +31,19 @@ process {
         fastqc = "fastqc"
     }
 
-    $run_fastqc_eval {
-    }
+    //$run_fastqc_eval {
+    //
+    //}
 
     $run_trim {
         threads = 1
         trimmomatic = 'java -jar /home/karinlag/bin/Trimmomatic-0.36/trimmomatic-0.36.jar'
         adapter_dir = '/home/karinlag/bin/Trimmomatic-0.36/adapters'
+    }
+
+    $run_strip {
+        threads = 1
+        bbmap = "bbmap.sh"
     }
 
     $spades_assembly {
