--- a/conf/track_three_template.config
+++ b/conf/track_three_template.config
@@ -33,6 +33,10 @@ params.fastqc = "fastqc"
 // Fastqc evaluation results
 params.fastqc_eval = "fastqc_eval"
 
+// BBmap params, has to be absolute paths
+params.bbmap = "bbmap"
+params.stripgenome = "/work/projects/nn9305k/genome_references/genomes/PhiX/PhiX.fasta"
+params.stripdir = "/work/projects/nn9305k/genome_references/bbmap_refs"
 
 // Trimmomatic configuration variables
 params.trimmed = "trimmed"
