I have now got the bbmap stuff working, thus I can get PhiX stripped out of the reads. I have put that before trimming, because there's no point in trimming reads that will be stripped.

--- a/conf/slurm.config
+++ b/conf/slurm.config
@@ -47,6 +47,11 @@ process {
         adapter_dir = '/work/projects/nn9305k/db_flatfiles/trimmomatic_adapters'
     }
 
+    $run_strip {
+        threads = 6
+        bbmap = "bbmap.sh"
+    }
+
     $spades_assembly {
         cpus = 16
         time = { 6.h * task.attempt}
