--- a/conf/standard.config
+++ b/conf/standard.config
@@ -43,12 +43,12 @@ process {
 
     $run_strip {
         threads = 1
-        bbmap = "bbmap.sh"
+        bbmap = "bbmap"
     }
 
     $spades_assembly {
         cpus = 1
-        spades = '/home/karinlag/bin/SPAdes-3.10.1-Linux/bin/spades.py'
+        spades = '/home/karinlag/bin/spades.py'
     }
 
 
