Changed from bbmap to bbduk

--- a/conf/standard.config
+++ b/conf/standard.config
@@ -43,7 +43,7 @@ process {
 
     $run_strip {
         threads = 1
-        bbmap = "bbmap"
+        bbduk = "bbduk.sh"
     }
 
     $spades_assembly {
