Added prokka to the pipeline

--- a/conf/asm_annot_template.config
+++ b/conf/asm_annot_template.config
@@ -23,7 +23,7 @@ params.out_dir = "track_three"
 params.pwd = "$PWD"
 params.help = false
 
-// BBmap params, has to be absolute paths
+// BBDuk params, has to be absolute paths
 params.stripgenome = "/work/projects/nn9305k/genome_references/genomes/PhiX/PhiX.fasta"
 params.stripdir = "/work/projects/nn9305k/genome_references/bbmap_refs"
 
@@ -42,6 +42,16 @@ params.adapters = "TruSeq3-PE.fa"
 params.assembly = "spades_asm"
 params.careful = "--careful"
 params.cov_cutoff = "off"
+
+// PROKKA configuration variables
+params.locustag = "locustag"
+params.genus = "Escherichia"
+params.species = "coli"
+params.kingdom = "Bacteria"
+// If you have additional options to set, put them here.
+params.prokka_additional = ""
+params.centre = "NVI"
+
 
 
 // QUAST variables
