--- a/conf/standard.config
+++ b/conf/standard.config
@@ -51,6 +51,12 @@ process {
         spades = '/home/karinlag/bin/spades.py'
     }
 
+    $run_prokka {
+        cpus = 1
+        prokka = 'prokka'
+    }
+
+
 
     $quast_eval {
         threads = 1
