Trying to add bwa mem here, but have messed up my channels somehow

--- a/conf/standard.config
+++ b/conf/standard.config
@@ -57,6 +57,12 @@ process {
     }
 
 
+    $run_bwamem {
+        cpus = 1
+        bwaindex = "bwa index"
+        bwamem = 'bwa mem'
+    }
+
 
     $quast_eval {
         threads = 1
