Functioning mapping step in place

--- a/conf/standard.config
+++ b/conf/standard.config
@@ -59,8 +59,7 @@ process {
 
     $run_bwamem {
         cpus = 1
-        bwaindex = "bwa index"
-        bwamem = 'bwa mem'
+        bwa = "bwa"
     }
 
 
