Pilon working, but channels are all messed up, need to tidy tose up

--- a/conf/standard.config
+++ b/conf/standard.config
@@ -60,8 +60,14 @@ process {
     $run_bwamem {
         cpus = 1
         bwa = "bwa"
+        samtools = "samtools"
     }
 
+    $run_pilon {
+        cpus = 1
+        pilon = "pilon"
+
+    }
 
     $quast_eval {
         threads = 1
