Standard: removed path qc: adjusted output directory for multiqc.

--- a/conf/standard.config
+++ b/conf/standard.config
@@ -5,26 +5,16 @@
 */
 
 
-env {
-    PATH = '/home/karinlag/bin/:${PATH}'
-
-}
+//env {
+//   PATH = '/home/karinlag/bin/:${PATH}'
+//}
 
 
 process {
     executor = "local"
     cpus = 1
 
-     /* Programs that have to be available on the cmd line
-    * To run ariba (mlst, amr and virulence):
-    *
-    * python3
-    * ariba
-    * cd-hit
-    * mummer
-    * bowtie2
-    *
-    */
+
 
     $run_fastqc {
         threads = 1
