Standard: removed fastqc specific directory qc_track: using cpus instead of threads, as well as simple command names

--- a/conf/standard.config
+++ b/conf/standard.config
@@ -16,10 +16,10 @@ process {
 
 
 
-    $run_fastqc {
-        threads = 1
-        fastqc = "fastqc"
-    }
+//    $run_fastqc {
+//        threads = 1
+//        fastqc = "fastqc"
+//    }
 
     //$run_fastqc_eval {
     //
