--- a/conf/asm_annot_template.config
+++ b/conf/asm_annot_template.config
@@ -36,6 +36,7 @@ params.leading = 3
 params.trailing = 3
 params.minlen = 36
 params.adapters = "TruSeq3-PE.fa"
+params.adapter_dir = "/home/karinlag/bin/Trimmomatic-0.36/adapters"
 
 
 // SPAdes configuration variables
