condastandard: file giving conda directions when local executor standard: added maxfork nextflow.conf: adding condastandard as include

--- a/nextflow.config
+++ b/nextflow.config
@@ -12,8 +12,12 @@ vim: syntax=groovy
 
 profiles {
 
-  standard {
+  local {
     includeConfig 'conf/standard.config'
+  }
+  condalocal {
+    includeConfig 'conf/standard.config'
+    includeConfig 'conf/condastandard.config'
   }
   slurm {
     includeConfig 'conf/slurm.config'
