Conda slurm: adding conda slurm config file nextflow config: adding condaslurm file as an include slurm config: removing specific directives, adding general set.

--- a/conf/slurm.config
+++ b/conf/slurm.config
@@ -1,69 +1,32 @@
 /*
 * Profile for use on a slurm queueing system
 * This file will have to be modified to your local system
-* Currently this file assumes that a lot of software is available
-* via the module system http://modules.sourceforge.net/
-* If this is not the case, all software listed after "module"
-* have to be given a specific path so that it will be available
+* This file currently assumes that commands are available
+* on the command line, somehow.
 *
 * Currently this file is tuned to work on the Abel University
 * of Oslo HPC cluster.
-*
-* Not all software is being used by all tracks. Each software
-* contains a comment explaining which track(s) it is part of.
 */
 
-// cluster specific options
+/*
+* The underlying assumption is that all processes unless
+* otherwise specified uses 16 cpus, and have an upper limit
+* of two hours. Exeptions are programs such as fastqc
+* and multiqc which do not benefit from multiple cpus.
+* These are labeled 'one' in the code.
+* Additionally, spades is given more time.
+*/
+
 process {
     executor = 'slurm'
     clusterOptions = '--job-name=nxf_test --account=nn9305k --mem-per-cpu=3140'
-    maxForks=64
-    time = { 2.h * task.attempt }
-    maxRetries=3
+    maxForks = 128
+    maxRetries = 3
     errorStrategy='retry'
 
-// Abel specific software options
+    cpus = 16
+    withLabel: one { cpus = 1 }
 
-    $run_fastqc {
-        // note, number of threads and cpus have to be the same
-        threads = 6
-        cpus = 6
-        time = { 60.m * task.attempt }
-        module = ['fastqc']
-        fastqc = "fastqc"
-    }
-
-    $run_fastqc_eval {
-        time = { 60.m * task.attempt }
-        module = ['python3']
-    }
-
-    $run_trim {
-        // note, number of threads and cpus have to be the same
-        threads = 6
-        cpus = 6
-        time = { 60.m * task.attempt }
-        trimmomatic = 'java -Xmx1024m -jar /work/projects/nn9305k/bin/trimmomatic-0.36.jar'
-        adapter_dir = '/work/projects/nn9305k/db_flatfiles/trimmomatic_adapters'
-    }
-
-    $run_strip {
-        threads = 6
-        bbmap = "bbmap.sh"
-    }
-
-    $spades_assembly {
-        cpus = 16
-        time = { 6.h * task.attempt}
-        module = ['spades/3.9.0']
-        spades = 'spades.py'
-
-    }
-
-    $quast_eval {
-        threads = 6
-        time = { 30.m * task.attempt }
-        module = ['quast']
-        quast = 'quast.py'
-    }
+    time = { 2.h * task.attempt }
+    withName: spades_assembly {time = { 60.m * task.attempt }}
 }
