--- a/nextflow.config
+++ b/nextflow.config
@@ -22,4 +22,8 @@ profiles {
   slurm {
     includeConfig 'conf/slurm.config'
   }
+  condaslurm {
+    includeConfig 'conf/slurm.config'
+    includeConfig 'conf/condaslurm.config'
+  }
 }
