Updated time for spades, and adjusted down normal time.

--- a/conf/slurm.config
+++ b/conf/slurm.config
@@ -26,6 +26,6 @@ process {
 
     cpus = 16
 
-    time = { 2.h * task.attempt }
-    withName: spades_assembly {time = { 60.m * task.attempt }}
+    time = { 1.h * task.attempt }
+    withName: spades_assembly {time = { 4.h * task.attempt }}
 }
