changing name of spades process

--- a/conf/slurm.config
+++ b/conf/slurm.config
@@ -27,5 +27,5 @@ process {
     cpus = 16
 
     time = { 1.h * task.attempt }
-    withName: spades_assembly {time = { 4.h * task.attempt }}
+    withName: run_spadesasm {time = { 4.h * task.attempt }}
 }
