Moved the onComplete stuff from each script to the nextflow.conf script.

--- a/nextflow.config
+++ b/nextflow.config
@@ -27,3 +27,18 @@ profiles {
     includeConfig 'conf/condaslurm.config'
   }
 }
+
+workflow.onComplete = {
+    // any workflow property can be used here
+    println "Pipeline complete"
+    println "Command line: $workflow.commandLine"
+    println "Nextflow Version:	$workflow.nextflow.version"
+    println "Command Line:		$workflow.commandLine"
+    println "Duration:		    $workflow.duration"
+    println "Output Directory:	$params.out_dir"
+}
+
+
+workflow.onError = {
+    println "Oops .. something when wrong"
+}
