--- a/conf/slurm.config
+++ b/conf/slurm.config
@@ -20,12 +20,13 @@
 process {
     executor = 'slurm'
     clusterOptions = '--job-name=nxf_test --account=nn9305k --mem-per-cpu=3140'
-    maxForks = 128
+    maxForks = 24
     maxRetries = 3
     errorStrategy='retry'
 
     cpus = 16
+    withLabel: one {cpus = 1}
 
     time = { 1.h * task.attempt }
-    withName: run_spadesasm {time = { 4.h * task.attempt }}
+    withLabel: longtime {time = { 4.h * task.attempt }}
 }
