--- a/conf/slurm.config
+++ b/conf/slurm.config
@@ -20,7 +20,7 @@
 process {
     executor = 'slurm'
     clusterOptions = '--job-name=nxf_test --account=nn9305k --mem-per-cpu=3140'
-    maxForks = 24
+    queueSize = 24
     maxRetries = 3
     errorStrategy='retry'
 
