Adding savemode so that we can choose link or copy

--- a/conf/asm_annot_template.config
+++ b/conf/asm_annot_template.config
@@ -22,6 +22,7 @@ params.out_dir = "track_three"
 // General configuration variables
 params.pwd = "$PWD"
 params.help = false
+params.savemode = "copy"
 
 // BBDuk params, has to be absolute paths
 params.stripgenome = "/work/projects/nn9305k/genome_references/genomes/PhiX/PhiX.fasta"
