--- a/conf/qc_track_template.config
+++ b/conf/qc_track_template.config
@@ -21,6 +21,7 @@ params.out_dir = "track_one"
 // General configuration variables
 params.pwd = "$PWD"
 params.help = false
+params.savemode = "link"
 
 // Raw fastqc results
 params.fastqc = "fastqc"
