Added javaopts to adjust java heap size to pilon

--- a/conf/slurm.config
+++ b/conf/slurm.config
@@ -27,6 +27,9 @@ process {
     cpus = 16
     withLabel: one {cpus = 1}
 
+    //this is mostly for pilon, but can be used elsewhere too
+    javaopts = '-Xmx12G'
+
     time = { 1.h * task.attempt }
     withLabel: longtime {time = { 4.h * task.attempt }}
 }
