--- a/conf/standard.config
+++ b/conf/standard.config
@@ -8,4 +8,7 @@ process {
     executor = "local"
     cpus = 1
     maxForks = 2
+    //this is mostly for pilon, but can be used elsewhere too
+    javaopts = ''
+
 }
