Solving iss 16 in NVI BIFROST repo Have made it possible to remove short contigs for spades. This asm will be used downstream for all processes.

--- a/conf/asm_annot_template.config
+++ b/conf/asm_annot_template.config
@@ -44,6 +44,7 @@ params.adapter_dir = "/home/karinlag/bin/Trimmomatic-0.36/adapters"
 params.assembly = "spades_asm"
 params.careful = "--careful"
 params.cov_cutoff = "off"
+params.min_contig_len = "500"
 
 // PROKKA configuration variables
 params.locustag = "locustag"
