Changed path to trimmomatic adapter directory

--- a/conf/asm_annot_template.config
+++ b/conf/asm_annot_template.config
@@ -37,7 +37,7 @@ params.leading = 3
 params.trailing = 3
 params.minlen = 36
 params.adapters = "TruSeq3-PE.fa"
-params.adapter_dir = "/cluster/projects/nn9305k/db_flatfiles/Trimmomatic-0.36/adapters"
+params.adapter_dir = "/cluster/projects/nn9305k/db_flatfiles/trimmomatic_adapters"
 
 
 // SPAdes configuration variables
