--- a/conf/slurm.config
+++ b/conf/slurm.config
@@ -19,7 +19,7 @@
 
 process {
     executor = 'slurm'
-    clusterOptions = '--job-name=nxf_test --account=nn9305k --mem-per-cpu=4700'
+    clusterOptions = '--job-name=nxf_test --account=nn9305k --mem-per-cpu=4700M'
     queueSize = 24
     maxRetries = 3
     errorStrategy='retry'
