This is the first commit in the conda fix. In this commit I have: - added a conda directive to the two processes in fastqc_multi.nf - added a condahome param to the two conda config files.
Note, I had to change that from process to params to get it to read
the condahome setting. I am not happy about not quite understanding
why that had to be.

--- a/conf/condaslurm.config
+++ b/conf/condaslurm.config
@@ -4,6 +4,6 @@
 * are available on the command line as expected.
 */
 
-process {
-  conda = '/cluster/projects/nn9305k/src/miniconda/envs/bifrost'
-}
+params {
+  condahome = '/cluster/projects/nn9305k/src/miniconda/envs'
+  }
