--- a/conf/condastandard.config
+++ b/conf/condastandard.config
@@ -5,6 +5,6 @@
 * are available on the command line as expected.
 */
 
-process {
-  conda = '/home/karinlag/src/anaconda3/envs/bifrost'
+params {
+  condahome = "/home/karinlag/src/miniconda/envs"
 }
