With this commit, fixing the conda stuff is done. I have parsed all the conda env things to the three conda config files, thus making the scripts themselves independent.

--- a/nextflow.config
+++ b/nextflow.config
@@ -18,6 +18,8 @@ profiles {
   condalocal {
     includeConfig 'conf/standard.config'
     includeConfig 'conf/condastandard.config'
+    includeConfig 'conf/conda.config'
+
   }
   slurm {
     includeConfig 'conf/slurm.config'
@@ -25,6 +27,8 @@ profiles {
   condaslurm {
     includeConfig 'conf/slurm.config'
     includeConfig 'conf/condaslurm.config'
+    includeConfig 'conf/conda.config'
+
   }
 }
 
