This commit contains all that is needed for multiqc to happen at the end of the analysis, which means including info on a lot of things. As a consequence new channels has been made, and some command lines have been changed to pick up new files for processing by multiqc. Also, the initial multiqc run has been removed.
Notable changes:
The output from trimmomatic has been split into stderr and stdout. Multiqc
uses the stderr for putting things into the report.

The output from prokka has been given a more specific name, so that the
naming in the report will be more meaningful.

--- a/conf/conda.config
+++ b/conf/conda.config
@@ -11,7 +11,15 @@ process {
   conda = "${params.condahome}/bifrost2022-fastqc"
   }
 
+  withName: run_fastqc_trimmed {
+  conda = "${params.condahome}/bifrost2022-fastqc"
+  }
+
   withName: run_multiqc {
+  conda = "${params.condahome}/bifrost2022-multiqc"
+  }
+
+ withName: run_multiqc_final {
   conda = "${params.condahome}/bifrost2022-multiqc"
   }
 
