Updated asm_annot conf to reflect new data structure and to add multiqc yaml file. Also removed careful and set coverage cutoff to auto

--- a/conf/asm_annot_template.config
+++ b/conf/asm_annot_template.config
@@ -16,17 +16,19 @@
 params.reads = "../testdata/risk_short/*L00{1,2}_R{1,2}_001.fastq.gz"
 params.setsize = 4
 
-//  Specify the name of the output directory, relative to where the script is being run
-params.out_dir = "track_three"
-
 // General configuration variables
 params.pwd = "$PWD"
 params.help = false
 params.savemode = "copy"
 
+
+// Directory to where data is stored
+params.data_dir = "/cluster/projects/nn9305k/vi_pipeline_data/bifrost_data"
+params.multiqc_config = "/cluster/projects/nn9305k/Bifrost22/conf/multiqc_config.yaml"
+
 // BBDuk params, has to be absolute paths
-params.stripgenome = "/cluster/projects/nn9305k/genome_references/genomes/PhiX/PhiX.fasta"
-params.stripdir = "/cluster/projects/nn9305k/genome_references/bbmap_refs"
+params.stripgenome = "${params.data_dir}/genome_references/genomes/PhiX/PhiX.fasta"
+params.stripdir = "${params.data_dir}/genome_references/bbmap_refs"
 
 
 // Trimmomatic configuration variables
@@ -36,14 +38,13 @@ params.slidingwindow = "4:15"
 params.leading = 3
 params.trailing = 3
 params.minlen = 36
-params.adapters = "TruSeq3-PE.fa"
-params.adapter_dir = "/cluster/projects/nn9305k/db_flatfiles/trimmomatic_adapters"
+params.adapters = "NexteraPE-PE.fa"
+params.adapter_dir = "${params.data_dir}/trimmomatic_adapters"
 
 
 // SPAdes configuration variables
 params.assembly = "spades_asm"
-params.careful = "--careful"
-params.cov_cutoff = "off"
+params.cov_cutoff = "auto"
 params.min_contig_len = "500"
 
 // PROKKA configuration variables
@@ -58,6 +59,5 @@ params.centre = "NVI"
 
 
 // QUAST variables
-params.genome_directory = "/cluster/projects/nn9305k/genome_references/genomes/"
-params.quast_ref = "${params.genome_directory}ecoli/GCF_000005845.2_ASM584v2_genomic.fna"
-params.quast_genes = "${params.genome_directory}ecoli/GCF_000005845.2_ASM584v2_genomic.gff"
+params.quast_ref = "${params.data_dir}/genome_references/genomes/ecoli/GCF_000005845.2_ASM584v2_genomic.fna"
+params.quast_genes = "${params.data_dir}/genome_references/genomes/ecoli/GCF_000005845.2_ASM584v2_genomic.gff"
